Closed Bug 1823586 Opened 1 year ago Closed 1 year ago

Unexpected AbortError from setSinkId() when video element is suspended

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox-esr102 --- disabled
firefox111 --- disabled
firefox112 --- disabled
firefox113 --- fixed

People

(Reporter: karlt, Assigned: karlt)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

setSinkId() still changes the sink as expected, but rejects its returned promise.
Doesn't reproduce with audio element.
https://hg.mozilla.org/mozilla-central/rev/cc1790a6b7e428834c1f89726ac7d276973a701c#l4.40

Blocks: 1498512

Set release status flags based on info from the regressing bug 1571513

The new sink device is already recorded on the decoder and will be used on
resume.

Depends on D173107

Pushed by ktomlinson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2f9380a15086
test setSinkId() on paused and playing video r=alwu
https://hg.mozilla.org/integration/autoland/rev/3098f3a6b469
don't reject a sink change when delaying new media sink creation for a suspended MediaDecoder r=alwu
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/39147 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: