Bug 1823586 don't reject a sink change when delaying new media sink creation for a suspended MediaDecoder r=alwu

The new sink device is already recorded on the decoder and will be used on
resume.

Depends on D173107

Differential Revision: https://phabricator.services.mozilla.com/D173108